--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html {
   <div class="flex items-center space-x-2">
     <a href="#home" class="block">
       <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:56px; height:56px;">
-        <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
+        <img src="QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
       </span>
     </a>
     <span class="text-white text-2xl font-bold tracking-wide ml-2">Quantum Automation</span>
@@ -220,7 +220,7 @@ html {
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center px-4">
       <div class="mb-4 md:mb-0 flex items-center space-x-2">
   <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:44px; height:44px;">
-    <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
+    <img src="QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
   </span>
   <span class="font-bold text-lg">Quantum Automation</span>
 </div>
