--- a/index.html
+++ b/index.html
@@ -1,184 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quantum Automation</title>
-  <!-- Tailwind CSS CDN for simplicity -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Open Sans', 'sans-serif'],
+            heading: ['Montserrat', 'sans-serif']
+          }
+        }
+      }
+    }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Open Sans', Arial, sans-serif; }
-    h1, h2, h3, h4 { font-family: 'Montserrat', Arial, sans-serif; }
-html {
-  scroll-behavior: smooth;
-}
+    body { font-family: 'Open Sans', sans-serif; }
+    h1, h2, h3, h4 { font-family: 'Montserrat', sans-serif; }
+    html { scroll-behavior: smooth; }
   </style>
 </head>
-<body class="bg-white text-[#222222]">
+<body class="bg-white text-[#222]">
 
-  <!-- Navigation Bar -->
-  <nav class="flex items-center justify-between px-6 py-4 bg-[#1A237E]">
-  <div class="flex items-center space-x-2">
-    <a href="#home" class="block">
-      <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:56px; height:56px;">
-        <img src="QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
+  <!-- Navigation -->
+  <header class="bg-[#1A237E] text-white">
+    <div class="max-w-7xl mx-auto flex justify-between items-center px-4 py-4">
+      <div class="flex items-center space-x-3">
+        <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:56px; height:56px;">
+        <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
       </span>
-    </a>
-    <span class="text-white text-2xl font-bold tracking-wide ml-2">Quantum Automation</span>
-  </div>
-  <div class="space-x-6">
-    <a href="#home" class="text-white hover:text-[#00BFAE]">Home</a>
-    <a href="#about" class="text-white hover:text-[#00BFAE]">About</a>
-    <a href="#services" class="text-white hover:text-[#00BFAE]">Services</a>
-    <a href="#projects" class="text-white hover:text-[#00BFAE]">Projects</a>
-    <a href="#contact" class="text-white hover:text-[#00BFAE]">Contact</a>
-  </div>
-</nav>
+        <span class="text-xl font-bold">Quantum Automation</span>
+      </div>
+      <nav class="hidden md:flex space-x-6">
+        <a href="#home" class="hover:text-[#00BFAE]">Home</a>
+        <a href="#about" class="hover:text-[#00BFAE]">About</a>
+        <a href="#services" class="hover:text-[#00BFAE]">Services</a>
+        <a href="#projects" class="hover:text-[#00BFAE]">Projects</a>
+        <a href="#contact" class="hover:text-[#00BFAE]">Contact</a>
+      </nav>
+      <button id="menu-toggle" class="md:hidden focus:outline-none">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+    </div>
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="md:hidden hidden px-4 pb-4">
+      <a href="#home" class="block py-2 hover:text-[#00BFAE]">Home</a>
+      <a href="#about" class="block py-2 hover:text-[#00BFAE]">About</a>
+      <a href="#services" class="block py-2 hover:text-[#00BFAE]">Services</a>
+      <a href="#projects" class="block py-2 hover:text-[#00BFAE]">Projects</a>
+      <a href="#contact" class="block py-2 hover:text-[#00BFAE]">Contact</a>
+    </div>
+  </header>
 
-
-
-  <!-- Hero Section -->
-  <section class="flex flex-col items-center justify-center text-center py-20 bg-[#F5F7FA]">
+  <!-- Hero -->
+  <section id="home" class="text-center py-20 px-4 bg-[#F5F7FA]">
     <h1 class="text-4xl md:text-5xl font-bold text-[#1A237E] mb-4">Innovative BMS & IT Solutions</h1>
-    <p class="text-lg md:text-xl text-[#222222] mb-8 max-w-xl">
+    <p class="text-lg md:text-xl max-w-2xl mx-auto mb-8">
       Empowering businesses with smart automation, seamless integration, and cutting-edge technology.
     </p>
-    <a href="#services" class="bg-[#00BFAE] text-white px-8 py-3 rounded-lg shadow hover:bg-[#009e8e] transition">
-  Explore Our Solutions
-</a>
+    <a href="#services" class="inline-block bg-[#00BFAE] text-white px-8 py-3 rounded-lg shadow hover:bg-[#009e8e] transition">
+      Explore Our Solutions
+    </a>
   </section>
 
-  <!-- About Us Section -->
-  <section id="about" class="py-16 bg-white flex flex-col items-center px-4">
+  <!-- About -->
+  <section id="about" class="py-16 px-4 bg-white text-center">
     <h2 class="text-3xl font-bold text-[#1A237E] mb-4">About Us</h2>
-    <p class="text-lg text-gray-700 max-w-2xl text-center mb-6">
-      <strong>Quantum Automation</strong> is a leading provider of Building Management Systems (BMS) and IT solutions. We empower organizations with innovative automation, seamless integration, and a commitment to efficiency and sustainability.
+    <p class="text-lg text-gray-700 max-w-2xl mx-auto mb-8">
+      <strong>Quantum Automation</strong> provides innovative Building Management Systems and IT solutions that prioritize efficiency, automation, and sustainability.
     </p>
-    <div class="flex flex-col md:flex-row gap-8 mt-6">
+    <div class="flex flex-col md:flex-row gap-8 justify-center">
       <div class="bg-[#F5F7FA] p-6 rounded-lg shadow w-full md:w-80">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Our Mission</h3>
-        <p class="text-gray-700">
-          To empower businesses with state-of-the-art automation and IT, driving operational excellence and sustainability.
-        </p>
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Our Mission</h3>
+        <p>Empowering businesses through state-of-the-art automation and IT excellence.</p>
       </div>
       <div class="bg-[#F5F7FA] p-6 rounded-lg shadow w-full md:w-80">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Our Vision</h3>
-        <p class="text-gray-700">
-          To be the most trusted partner in intelligent building and IT automation, delivering value and innovation.
-        </p>
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Our Vision</h3>
+        <p>To be the most trusted partner in intelligent building and IT automation.</p>
       </div>
     </div>
   </section>
 
-  <!-- Services Section -->
-  <section id="section" class="py-16 bg-[#F5F7FA] flex flex-col items-center px-4">
+  <!-- Services -->
+  <section id="services" class="py-16 px-4 bg-[#F5F7FA] text-center">
     <h2 class="text-3xl font-bold text-[#1A237E] mb-4">Our Services</h2>
-    <p class="text-lg text-gray-700 max-w-2xl text-center mb-8">
-      We deliver a full suite of Building Management and IT solutions, tailored to your business needs.
+    <p class="text-lg text-gray-700 max-w-2xl mx-auto mb-8">
+      Explore our wide range of BMS and IT offerings tailored for your business.
     </p>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl w-full">
-      <!-- Service Card 1 -->
+    <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">BMS Integration</h3>
-        <p class="text-gray-700">
-          Intelligent integration of fire alarm, access control, HVAC, and energy management systems for seamless building automation.
-        </p>
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">BMS Integration</h3>
+        <p>Fire alarm, HVAC, and access control integration for smart building automation.</p>
       </div>
-      <!-- Service Card 2 -->
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Niagara & Central Plant Programming</h3>
-        <p class="text-gray-700">
-          Expert programming and commissioning of Niagara N4, JACE 8000, AHU, VAV, FCU, and chiller systems for optimized performance.
-        </p>
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Niagara & Plant Programming</h3>
+        <p>Programming Niagara N4, JACE 8000, AHU, VAV, FCU, and chiller systems.</p>
       </div>
-      <!-- Service Card 3 -->
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">IT & Server Solutions</h3>
-        <p class="text-gray-700">
-          Reliable server deployment, VMware setup, network building, and cybersecurity for robust IT infrastructure.
-        </p>
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">IT & Server Solutions</h3>
+        <p>Robust VMware, networking, and cybersecurity solutions.</p>
       </div>
-      <!-- Service Card 4 -->
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">ERP & Software Development</h3>
-        <p class="text-gray-700">
-          Custom ERP, web, and mobile software development to streamline your business processes and boost productivity.
-        </p>
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">ERP & Software Development</h3>
+        <p>Custom ERP and software for digital transformation and productivity.</p>
       </div>
-      <!-- Service Card 5 -->
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Digital Marketing</h3>
-        <p class="text-gray-700">
-          SEO, PPC, and content marketing to grow your digital presence and reach your target audience effectively.
-        </p>
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Digital Marketing</h3>
+        <p>SEO, PPC, and content marketing to amplify your digital presence.</p>
       </div>
-      <!-- Service Card 6 -->
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Data Analysis & Automation</h3>
-        <p class="text-gray-700">
-          Excel automation, dashboards, and financial analysis for actionable business insights and smarter decisions.
-        </p>
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Data Analysis & Automation</h3>
+        <p>Excel automation and business dashboards for actionable insights.</p>
       </div>
     </div>
   </section>
 
-  <!-- Projects Section -->
-  <section id="projects" class="py-16 bg-white flex flex-col items-center px-4">
+  <!-- Projects -->
+  <section id="projects" class="py-16 px-4 bg-white text-center">
     <h2 class="text-3xl font-bold text-[#1A237E] mb-4">Our Projects</h2>
-    <p class="text-lg text-gray-700 max-w-2xl text-center mb-8">
-      Take a look at some of our recent work in building management and IT automation.
+    <p class="text-lg text-gray-700 max-w-2xl mx-auto mb-8">
+      Highlights of our impactful work in BMS and IT transformation.
     </p>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl w-full">
-      <!-- Project Card 1 -->
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Pharma Plant BMS Integration</h3>
-        <p class="text-gray-700 mb-2">
-          Integrated chiller and heat pump systems for a leading pharmaceutical manufacturer, improving efficiency and safety.
-        </p>
-        <span class="text-xs text-gray-500">Ongoing</span>
+    <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
+      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow">
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Pharma Plant BMS</h3>
+        <p>Integrated chiller and HVAC for a major pharma manufacturer.</p>
+        <span class="text-sm text-gray-500">Ongoing</span>
       </div>
-      <!-- Project Card 2 -->
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Corporate Office Automation</h3>
-        <p class="text-gray-700 mb-2">
-          Delivered complete BMS and IT solutions for a major corporate office, including access control and energy management.
-        </p>
-        <span class="text-xs text-gray-500">Completed</span>
+      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow">
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Corporate Office Automation</h3>
+        <p>Full BMS and IT setup with access control and monitoring.</p>
+        <span class="text-sm text-gray-500">Completed</span>
       </div>
-      <!-- Project Card 3 -->
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Smart Hotel System</h3>
-        <p class="text-gray-700 mb-2">
-          Developed and commissioned an intelligent building system for a luxury hotel, enhancing guest comfort and operational control.
-        </p>
-        <span class="text-xs text-gray-500">Completed</span>
-      </div>
-      <!-- Project Card 4 -->
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Niagara N4 Graphics for Bank</h3>
-        <p class="text-gray-700 mb-2">
-          Designed and implemented custom Niagara N4 graphics and controls for a major financial institution.
-        </p>
-        <span class="text-xs text-gray-500">Completed</span>
-      </div>
-      <!-- Project Card 5 -->
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Manufacturing Plant Automation</h3>
-        <p class="text-gray-700 mb-2">
-          Automated HVAC, lighting, and safety systems for a large-scale manufacturing facility, boosting productivity.
-        </p>
-        <span class="text-xs text-gray-500">Ongoing</span>
-      </div>
-      <!-- Project Card 6 -->
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Server & Network Setup</h3>
-        <p class="text-gray-700 mb-2">
-          Deployed secure server and network infrastructure for a multi-site client, ensuring reliability and scalability.
-        </p>
-        <span class="text-xs text-gray-500">Completed</span>
+      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow">
+        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Smart Hotel System</h3>
+        <p>Smart automation for luxury hospitality and guest control.</p>
+        <span class="text-sm text-gray-500">Completed</span>
       </div>
     </div>
   </section>
@@ -215,12 +178,13 @@ html {
     </div>
   </section>
 
+
   <!-- Footer -->
   <footer class="bg-[#1A237E] text-white py-6 mt-0 w-full">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center px-4">
       <div class="mb-4 md:mb-0 flex items-center space-x-2">
   <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:44px; height:44px;">
-    <img src="QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
+    <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
   </span>
   <span class="font-bold text-lg">Quantum Automation</span>
 </div>
@@ -249,6 +213,15 @@ html {
     </div>
   </footer>
 
+
+  <!-- Script for mobile toggle -->
+  <script>
+    const menuToggle = document.getElementById('menu-toggle');
+    const mobileMenu = document.getElementById('mobile-menu');
+    menuToggle.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
+  </script>
 
 </body>
 </html>
