--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="max-w-7xl mx-auto flex justify-between items-center px-4 py-4">
       <div class="flex items-center space-x-3">
         <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:56px; height:56px;">
-        <img src="QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
+        <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
       </span>
         <span class="text-xl font-bold">Quantum Automation</span>
       </div>
@@ -69,6 +69,28 @@
     </a>
   </section>
 
+<!-- Quick Facts -->
+<section class="bg-white py-12 px-4">
+  <div class="max-w-5xl mx-auto grid grid-cols-1 sm:grid-cols-3 gap-8 text-center">
+    <div>
+      <div class="text-3xl font-bold text-[#1A237E]">2+</div>
+      <div class="text-gray-600 mt-2">Years in Business</div>
+    </div>
+    <div>
+      <div class="text-3xl font-bold text-[#1A237E]">9+</div>
+      <div class="text-gray-600 mt-2">Years Team Experience</div>
+    </div>
+    <div>
+      <div class="text-3xl font-bold text-[#1A237E]">₹1.2 Cr+</div>
+      <div class="text-gray-600 mt-2">2023-24 Turnover</div>
+    </div>
+  </div>
+  <div class="text-center mt-8 text-gray-700">
+    Serving Manufacturing, Pharma, Hospitality, Corporate & Commercial Sectors
+  </div>
+</section>
+
+
   <!-- About -->
   <section id="about" class="py-16 px-4 bg-white text-center">
     <h2 class="text-3xl font-bold text-[#1A237E] mb-4">About Us</h2>
@@ -86,6 +108,52 @@
       </div>
     </div>
   </section>
+
+<!-- Company at a Quick Glance -->
+<section class="bg-white py-12 px-4">
+  <div class="max-w-5xl mx-auto">
+    <h3 class="text-2xl font-bold text-[#1A237E] text-center mb-8">Company at a Quick Glance</h3>
+    <div class="grid grid-cols-1 sm:grid-cols-3 gap-8 text-center">
+      <div>
+        <div class="text-3xl font-bold text-[#1A237E]">₹1.2 Cr+</div>
+        <div class="text-gray-600 mt-2">Turnover (2023-24)</div>
+      </div>
+      <div>
+        <div class="text-3xl font-bold text-[#1A237E]">₹3 Cr+</div>
+        <div class="text-gray-600 mt-2">Projected Turnover (2024-25)</div>
+      </div>
+      <div>
+        <div class="text-3xl font-bold text-[#1A237E]">Strong</div>
+        <div class="text-gray-600 mt-2">Financial Growth</div>
+      </div>
+    </div>
+    <div class="text-center mt-8 text-gray-700">
+      Trusted by leading organizations in manufacturing, pharma, hospitality, and corporate sectors.
+    </div>
+  </div>
+</section>
+
+
+<!-- Meet the Team -->
+<section class="py-12 px-4 bg-[#F5F7FA]">
+  <div class="max-w-5xl mx-auto">
+    <h3 class="text-2xl font-bold text-[#1A237E] mb-6 text-center">Meet the Team</h3>
+    <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 text-center">
+      <div class="bg-white p-6 rounded-lg shadow flex flex-col items-center">
+        <div class="font-bold text-[#00BFAE] text-lg mb-1">Mukund Dayma</div>
+        <div class="text-gray-700 text-sm">CEO<br>10+ years experience</div>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow flex flex-col items-center">
+        <div class="font-bold text-[#00BFAE] text-lg mb-1">Gaurav Dayama</div>
+        <div class="text-gray-700 text-sm">BDO<br>3+ years experience</div>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow flex flex-col items-center">
+        <div class="font-bold text-[#00BFAE] text-lg mb-1">Onkar Shete</div>
+        <div class="text-gray-700 text-sm">Head of BMS<br>4+ years experience</div>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Services -->
   <section id="services" class="py-16 px-4 bg-[#F5F7FA] text-center">
@@ -118,33 +186,60 @@
         <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Data Analysis & Automation</h3>
         <p>Excel automation and business dashboards for actionable insights.</p>
       </div>
+
     </div>
   </section>
 
-  <!-- Projects -->
-  <section id="projects" class="py-16 px-4 bg-white text-center">
-    <h2 class="text-3xl font-bold text-[#1A237E] mb-4">Our Projects</h2>
-    <p class="text-lg text-gray-700 max-w-2xl mx-auto mb-8">
-      Highlights of our impactful work in BMS and IT transformation.
-    </p>
-    <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow">
-        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Pharma Plant BMS</h3>
-        <p>Integrated chiller and HVAC for a major pharma manufacturer.</p>
-        <span class="text-sm text-gray-500">Ongoing</span>
-      </div>
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow">
-        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Corporate Office Automation</h3>
-        <p>Full BMS and IT setup with access control and monitoring.</p>
-        <span class="text-sm text-gray-500">Completed</span>
-      </div>
-      <div class="bg-[#F5F7FA] p-6 rounded-lg shadow">
-        <h3 class="text-xl text-[#00BFAE] font-semibold mb-2">Smart Hotel System</h3>
-        <p>Smart automation for luxury hospitality and guest control.</p>
-        <span class="text-sm text-gray-500">Completed</span>
-      </div>
+  <!-- Centered Projects Section -->
+<div class="max-w-6xl mx-auto mt-8">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-center">
+    <!-- Ongoing Projects -->
+    <div class="flex flex-col items-center">
+      <h3 class="text-2xl font-bold text-[#00BFAE] mb-4">Ongoing Projects</h3>
+      <ul class="space-y-6 w-full max-w-md">
+        <li class="bg-[#F5F7FA] p-5 rounded-lg shadow">
+          <div class="font-semibold text-[#1A237E]">Torrent Pharma</div>
+          <div class="text-gray-700 text-sm mb-1">Chiller & heat pump commissioning for pharma manufacturing</div>
+          <span class="text-xs bg-[#00BFAE] text-white px-2 py-1 rounded">Ongoing</span>
+        </li>
+        <li class="bg-[#F5F7FA] p-5 rounded-lg shadow">
+          <div class="font-semibold text-[#1A237E]">Intelligent Building Controls LLC</div>
+          <div class="text-gray-700 text-sm mb-1">Niagara graphics generation for building automation</div>
+          <span class="text-xs bg-[#00BFAE] text-white px-2 py-1 rounded">Ongoing</span>
+        </li>
+        <li class="bg-[#F5F7FA] p-5 rounded-lg shadow">
+          <div class="font-semibold text-[#1A237E]">Northwest Automation Products</div>
+          <div class="text-gray-700 text-sm mb-1">Floor plan design for advanced automation products</div>
+          <span class="text-xs bg-[#00BFAE] text-white px-2 py-1 rounded">Ongoing</span>
+        </li>
+      </ul>
     </div>
-  </section>
+
+    <!-- Previous Projects -->
+    <div class="flex flex-col items-center">
+      <h3 class="text-2xl font-bold text-[#00BFAE] mb-4">Previous Projects</h3>
+      <ul class="space-y-6 w-full max-w-md">
+        <li class="bg-[#F5F7FA] p-5 rounded-lg shadow">
+          <div class="font-semibold text-[#1A237E]">Kotak Bank, 3M, Finserv</div>
+          <div class="text-gray-700 text-sm mb-1">AHU commissioning, Niagara graphics implementation</div>
+          <span class="text-xs bg-green-600 text-white px-2 py-1 rounded">Completed</span>
+        </li>
+        <li class="bg-[#F5F7FA] p-5 rounded-lg shadow">
+          <div class="font-semibold text-[#1A237E]">Manufacturing & Pharma Clients</div>
+          <div class="text-gray-700 text-sm mb-1">WLD, PA system & energy meter integration</div>
+          <span class="text-xs bg-green-600 text-white px-2 py-1 rounded">Completed</span>
+        </li>
+        <li class="bg-[#F5F7FA] p-5 rounded-lg shadow">
+          <div class="font-semibold text-[#1A237E]">Smart Hotel System</div>
+          <div class="text-gray-700 text-sm mb-1">Smart automation for luxury hospitality and guest control</div>
+          <span class="text-xs bg-green-600 text-white px-2 py-1 rounded">Completed</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
 
   <!-- Contact Section -->
   <section id="contact" class="py-16 bg-[#F5F7FA] flex flex-col items-center px-4">
@@ -173,18 +268,33 @@
       <div class="mt-8 text-gray-700 text-center">
         <p><strong>Email:</strong> info@quantumautomation.com</p>
         <p><strong>Phone:</strong> +91-12345-67890</p>
-        <p><strong>Address:</strong> 123, Tech Park Avenue, Bengaluru, India</p>
+        <p><strong>Address:</strong> Office No. 802, Gera’s Imperium Rise, Hinjawadi Phase II, Rajiv Gandhi Infotech Park, Hinjawadi, Pune, Maharashtra 411057</p>
+
       </div>
     </div>
   </section>
 
+<!-- Clients Section -->
+<section class="py-12 bg-white px-4">
+  <div class="max-w-5xl mx-auto text-center">
+    <h3 class="text-2xl font-bold text-[#1A237E] mb-6">Our Clients</h3>
+    <div class="flex flex-wrap justify-center gap-6">
+      <span class="bg-[#F5F7FA] px-4 py-2 rounded text-[#00BFAE] font-semibold">Torrent Pharma</span>
+      <span class="bg-[#F5F7FA] px-4 py-2 rounded text-[#00BFAE] font-semibold">Kotak Bank</span>
+      <span class="bg-[#F5F7FA] px-4 py-2 rounded text-[#00BFAE] font-semibold">3M</span>
+      <span class="bg-[#F5F7FA] px-4 py-2 rounded text-[#00BFAE] font-semibold">Finserv</span>
+      <span class="bg-[#F5F7FA] px-4 py-2 rounded text-[#00BFAE] font-semibold">Intelligent Building Controls LLC</span>
+      <span class="bg-[#F5F7FA] px-4 py-2 rounded text-[#00BFAE] font-semibold">Northwest Automation Products</span>
+    </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer class="bg-[#1A237E] text-white py-6 mt-0 w-full">
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center px-4">
       <div class="mb-4 md:mb-0 flex items-center space-x-2">
   <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:44px; height:44px;">
-    <img src="QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
+    <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
   </span>
   <span class="font-bold text-lg">Quantum Automation</span>
 </div>
