--- a/index.html
+++ b/index.html
@@ -190,9 +190,60 @@
     </div>
   </section>
 
-  <!-- Centered Projects Section -->
-<div class="max-w-6xl mx-auto mt-8">
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-center">
+  <!-- Projects Section -->
+<section id="projects" class="py-16 bg-white flex flex-col items-center px-4">
+  <h2 class="text-3xl font-bold text-[#1A237E] mb-4">Our Projects</h2>
+  <p class="text-lg text-gray-700 max-w-2xl text-center mb-8">
+    Take a look at some of our recent work in building management and IT automation.
+  </p>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl w-full">
+    <!-- Project Card 1 -->
+    <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center text-center">
+      <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Pharma Plant BMS Integration</h3>
+      <p class="text-gray-700 mb-2">
+        Integrated chiller and heat pump systems for a leading pharmaceutical manufacturer, improving efficiency and safety.
+      </p>
+    </div>
+    <!-- Project Card 2 -->
+    <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center text-center">
+      <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Corporate Office Automation</h3>
+      <p class="text-gray-700 mb-2">
+        Delivered complete BMS and IT solutions for a major corporate office, including access control and energy management.
+      </p>
+    </div>
+    <!-- Project Card 3 -->
+    <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center text-center">
+      <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Smart Hotel System</h3>
+      <p class="text-gray-700 mb-2">
+        Developed and commissioned an intelligent building system for a luxury hotel, enhancing guest comfort and operational control.
+      </p>
+    </div>
+    <!-- Project Card 4 -->
+    <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center text-center">
+      <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Niagara N4 Graphics for Bank</h3>
+      <p class="text-gray-700 mb-2">
+        Designed and implemented custom Niagara N4 graphics and controls for a major financial institution.
+      </p>
+    </div>
+    <!-- Project Card 5 -->
+    <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center text-center">
+      <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Manufacturing Plant Automation</h3>
+      <p class="text-gray-700 mb-2">
+        Automated HVAC, lighting, and safety systems for a large-scale manufacturing facility, boosting productivity.
+      </p>
+    </div>
+    <!-- Project Card 6 -->
+    <div class="bg-[#F5F7FA] p-6 rounded-lg shadow hover:shadow-lg transition flex flex-col items-center text-center">
+      <h3 class="text-xl font-semibold text-[#00BFAE] mb-2">Server & Network Setup</h3>
+      <p class="text-gray-700 mb-2">
+        Deployed secure server and network infrastructure for a multi-site client, ensuring reliability and scalability.
+      </p>
+    </div>
+  </div>
+</section>
+
+  <!-- Ongoing and Previous Projects Summary -->
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl w-full text-center">
     <!-- Ongoing Projects -->
     <div class="flex flex-col items-center">
       <h3 class="text-2xl font-bold text-[#00BFAE] mb-4">Ongoing Projects</h3>
@@ -237,7 +288,7 @@
       </ul>
     </div>
   </div>
-</div>
+</section>
 
 
 
