--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
     <div class="max-w-7xl mx-auto flex justify-between items-center px-4 py-4">
       <div class="flex items-center space-x-3">
         <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:56px; height:56px;">
-        <img src="QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
+        <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
       </span>
         <span class="text-xl font-bold">Quantum Automation</span>
       </div>
       <nav class="hidden md:flex space-x-6">
         <a href="#home" class="hover:text-[#00BFAE]">Home</a>
         <a href="#about" class="hover:text-[#00BFAE]">About</a>
+	<a href="#team" class="hover:text-[#00BFAE]">Team</a>
         <a href="#services" class="hover:text-[#00BFAE]">Services</a>
         <a href="#projects" class="hover:text-[#00BFAE]">Projects</a>
         <a href="#contact" class="hover:text-[#00BFAE]">Contact</a>
@@ -52,6 +53,7 @@
     <div id="mobile-menu" class="md:hidden hidden px-4 pb-4">
       <a href="#home" class="block py-2 hover:text-[#00BFAE]">Home</a>
       <a href="#about" class="block py-2 hover:text-[#00BFAE]">About</a>
+      <a href="#team" class="block py-2 hover:text-[#00BFAE]">Team</a>
       <a href="#services" class="block py-2 hover:text-[#00BFAE]">Services</a>
       <a href="#projects" class="block py-2 hover:text-[#00BFAE]">Projects</a>
       <a href="#contact" class="block py-2 hover:text-[#00BFAE]">Contact</a>
@@ -135,7 +137,7 @@
 
 
 <!-- Meet the Team -->
-<section class="py-12 px-4 bg-[#F5F7FA]">
+<section id="team" class="py-12 px-4 bg-[#F5F7FA]">
   <div class="max-w-5xl mx-auto">
     <h3 class="text-2xl font-bold text-[#1A237E] mb-6 text-center">Meet the Team</h3>
     <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 text-center">
@@ -345,13 +347,14 @@
     <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center px-4">
       <div class="mb-4 md:mb-0 flex items-center space-x-2">
   <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:44px; height:44px;">
-    <img src="QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
+    <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
   </span>
   <span class="font-bold text-lg">Quantum Automation</span>
 </div>
       <div class="flex space-x-6 mb-4 md:mb-0">
   <a href="#home" class="hover:text-[#00BFAE]">Home</a>
   <a href="#about" class="hover:text-[#00BFAE]">About</a>
+  <a href="#team" class="hover:text-[#00BFAE]">Team</a>
   <a href="#services" class="hover:text-[#00BFAE]">Services</a>
   <a href="#projects" class="hover:text-[#00BFAE]">Projects</a>
   <a href="#contact" class="hover:text-[#00BFAE]">Contact</a>
