--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="max-w-7xl mx-auto flex justify-between items-center px-4 py-4">
       <div class="flex items-center space-x-3">
         <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:56px; height:56px;">
-        <img src="QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
+        <img src="C:\Users\lenovo\Desktop\Quantum Automation\QA.png" alt="Quantum Automation Logo" class="w-25 h-25 object-contain" />
       </span>
         <span class="text-xl font-bold">Quantum Automation</span>
       </div>
@@ -343,40 +343,42 @@
 </section>
 
   <!-- Footer -->
-  <footer class="bg-[#1A237E] text-white py-6 mt-0 w-full">
-    <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center px-4">
-      <div class="mb-4 md:mb-0 flex items-center space-x-2">
-  <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:44px; height:44px;">
-    <img src="QA.png" alt="Quantum Automation Logo" class="w-15 h-15 object-contain" />
-  </span>
-  <span class="font-bold text-lg">Quantum Automation</span>
-</div>
-      <div class="flex space-x-6 mb-4 md:mb-0">
-  <a href="#home" class="hover:text-[#00BFAE]">Home</a>
-  <a href="#about" class="hover:text-[#00BFAE]">About</a>
-  <a href="#team" class="hover:text-[#00BFAE]">Team</a>
-  <a href="#services" class="hover:text-[#00BFAE]">Services</a>
-  <a href="#projects" class="hover:text-[#00BFAE]">Projects</a>
-  <a href="#contact" class="hover:text-[#00BFAE]">Contact</a>
-</div>
-      <div class="flex space-x-4">
-        <!-- Social icons (optional, use SVG or image icons) -->
-        <a href="#" aria-label="LinkedIn" class="hover:text-[#00BFAE]">
-          <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.786-1.75-1.757 0-.97.784-1.757 1.75-1.757s1.75.787 1.75 1.757c0 .971-.784 1.757-1.75 1.757zm13.5 11.268h-3v-5.604c0-1.337-.024-3.062-1.867-3.062-1.868 0-2.154 1.459-2.154 2.968v5.698h-3v-10h2.881v1.367h.041c.401-.761 1.381-1.562 2.845-1.562 3.042 0 3.604 2.002 3.604 4.604v5.591z"/></svg>
-        </a>
-        <a href="#" aria-label="Twitter" class="hover:text-[#00BFAE]">
-          <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M24 4.557a9.93 9.93 0 0 1-2.828.775 4.932 4.932 0 0 0 2.165-2.724c-.951.564-2.005.974-3.127 1.195a4.92 4.92 0 0 0-8.391 4.482c-4.086-.205-7.713-2.165-10.141-5.144a4.822 4.822 0 0 0-.666 2.475c0 1.708.87 3.213 2.188 4.099a4.904 4.904 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.936 4.936 0 0 1-2.224.084c.627 1.956 2.444 3.377 4.6 3.417a9.868 9.868 0 0 1-6.102 2.104c-.396 0-.787-.023-1.175-.069a13.945 13.945 0 0 0 7.548 2.212c9.057 0 14.009-7.496 14.009-13.986 0-.213-.005-.425-.014-.636a10.025 10.025 0 0 0 2.457-2.548z"/></svg>
-        </a>
-        <a href="#" aria-label="Facebook" class="hover:text-[#00BFAE]">
-          <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M22.675 0h-21.35c-.733 0-1.325.592-1.325 1.326v21.348c0 .733.592 1.326 1.325 1.326h11.495v-9.294h-3.124v-3.622h3.124v-2.672c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.312h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.326v-21.349c0-.734-.593-1.326-1.326-1.326z"/></svg>
-        </a>
-      </div>
+<footer class="bg-[#1A237E] text-white py-6 mt-0 w-full">
+  <div class="max-w-6xl mx-auto flex flex-col md:flex-row md:justify-between md:items-center px-4">
+    <!-- Logo and Company Name -->
+    <div class="flex items-center justify-center md:justify-start mb-4 md:mb-0 space-x-2">
+      <span class="inline-flex items-center justify-center rounded-full bg-white shadow-md" style="width:44px; height:44px;">
+        <img src="assets/logo.png" alt="Quantum Automation Logo" class="w-10 h-10 object-contain" />
+      </span>
+      <span class="font-bold text-lg">Quantum Automation</span>
     </div>
-    <div class="text-center text-gray-300 text-sm mt-4">
-      &copy; 2025 Quantum Automation. All rights reserved.
+    <!-- Navigation Links -->
+    <div class="flex flex-wrap justify-center gap-x-4 gap-y-2 mb-4 md:mb-0">
+      <a href="#home" class="hover:text-[#00BFAE]">Home</a>
+      <a href="#about" class="hover:text-[#00BFAE]">About</a>
+      <a href="#team" class="hover:text-[#00BFAE]">Team</a>
+      <a href="#services" class="hover:text-[#00BFAE]">Services</a>
+      <a href="#projects" class="hover:text-[#00BFAE]">Projects</a>
+      <a href="#contact" class="hover:text-[#00BFAE]">Contact</a>
     </div>
-  </footer>
-
+    <!-- Social Icons -->
+    <div class="flex justify-center md:justify-end space-x-4">
+      <!-- Social icons (optional, use SVG or image icons) -->
+      <a href="#" aria-label="LinkedIn" class="hover:text-[#00BFAE]">
+        <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.761 0 5-2.239 5-5v-14c0-2.761-2.239-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.268c-.966 0-1.75-.786-1.75-1.757 0-.97.784-1.757 1.75-1.757s1.75.787 1.75 1.757c0 .971-.784 1.757-1.75 1.757zm13.5 11.268h-3v-5.604c0-1.337-.024-3.062-1.867-3.062-1.868 0-2.154 1.459-2.154 2.968v5.698h-3v-10h2.881v1.367h.041c.401-.761 1.381-1.562 2.845-1.562 3.042 0 3.604 2.002 3.604 4.604v5.591z"/></svg>
+      </a>
+      <a href="#" aria-label="Twitter" class="hover:text-[#00BFAE]">
+        <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M24 4.557a9.93 9.93 0 0 1-2.828.775 4.932 4.932 0 0 0 2.165-2.724c-.951.564-2.005.974-3.127 1.195a4.92 4.92 0 0 0-8.391 4.482c-4.086-.205-7.713-2.165-10.141-5.144a4.822 4.822 0 0 0-.666 2.475c0 1.708.87 3.213 2.188 4.099a4.904 4.904 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.936 4.936 0 0 1-2.224.084c.627 1.956 2.444 3.377 4.6 3.417a9.868 9.868 0 0 1-6.102 2.104c-.396 0-.787-.023-1.175-.069a13.945 13.945 0 0 0 7.548 2.212c9.057 0 14.009-7.496 14.009-13.986 0-.213-.005-.425-.014-.636a10.025 10.025 0 0 0 2.457-2.548z"/></svg>
+      </a>
+      <a href="#" aria-label="Facebook" class="hover:text-[#00BFAE]">
+        <svg class="w-5 h-5 fill-current" viewBox="0 0 24 24"><path d="M22.675 0h-21.35c-.733 0-1.325.592-1.325 1.326v21.348c0 .733.592 1.326 1.325 1.326h11.495v-9.294h-3.124v-3.622h3.124v-2.672c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.312h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.326v-21.349c0-.734-.593-1.326-1.326-1.326z"/></svg>
+      </a>
+    </div>
+  </div>
+  <div class="text-center text-gray-300 text-sm mt-4">
+    &copy; 2025 Quantum Automation. All rights reserved.
+  </div>
+</footer>
 
   <!-- Script for mobile toggle -->
   <script>
