--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </div>
   </div>
 </section>
-
+<center>
   <!-- Ongoing and Previous Projects Summary -->
   <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl w-full text-center">
     <!-- Ongoing Projects -->
@@ -290,6 +290,7 @@
       </ul>
     </div>
   </div>
+</center>
 </section>
 
 
